--- a/pom.xml
+++ b/pom.xml
@@ -275,6 +275,13 @@
 
 		<dependency>
 			<groupId>org.jetbrains.kotlinx</groupId>
+			<artifactId>kotlinx-serialization-json</artifactId>
+			<version>1.4.0</version>
+			<optional>true</optional>
+		</dependency>
+
+		<dependency>
+			<groupId>org.jetbrains.kotlinx</groupId>
 			<artifactId>kotlinx-coroutines-core</artifactId>
 			<optional>true</optional>
 		</dependency>
